--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ add_executable(CommandLineDB main.cpp)
 
 target_sources(CommandLineDB PRIVATE
         ./src/store.cpp
+        ./src/repl.cpp
+        ./src/db.cpp
         )
