add state transitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,11 @@ add_executable(CommandLineDB src/main.cpp)
 target_sources(CommandLineDB PRIVATE
         ./src/store.cpp
         ./src/repl.cpp
+        ./src/factory.cpp
         # cmds
-        src/factory.cpp
         ./src/cmds/connect.cpp
         ./src/cmds/make.cpp
         ./src/cmds/insert.cpp
         ./src/cmds/get.cpp
+        ./src/cmds/delete.cpp
         )
